--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -26,7 +26,7 @@
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Email</mat-label>
                   <input type="email" matInput required formControlName="email_id" name="Email_Id" ngModel placeholder="abc@gmail.com" />
-                  <mat-error *ngIf="form.controls.email_id.invalid && (form.controls.email_id.dirty || form.controls.email_id.touched)">E0000000000000000000nter a valid email address.</mat-error>
+                  <mat-error *ngIf="form.controls.email_id.invalid && (form.controls.email_id.dirty || form.controls.email_id.touched)">Enter a valid email address.</mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
