--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -30,13 +30,16 @@
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
-                  <input type="password" matInput name="Password" required formControlName="password" ngModel placeholder="Enter Password" />
-                  <mat-error *ngIf="form.controls.password.errors && (form.controls.password.dirty ||form.controls.password.touched) ">
-                    <span *ngIf="form.controls.password.errors.required">Password is required.</span>
-                    <span *ngIf="form.controls.password.errors.minlength">Password must be at least 8 characters long.</span>
-                    <span *ngIf="form.controls.password.errors.pattern">Password must contain at least one uppercase letter, one number, and one special character.</span>
+                  <input type="{{ hide ? 'password' : 'text' }}" matInput name="Password" required formControlName="password" ngModel placeholder="Enter Password" />
+                  <button mat-icon-button matSuffix (click)="togglePasswordVisibility()">
+                      <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+                  </button>
+                  <mat-error *ngIf="form.controls.password.errors && (form.controls.password.dirty || form.controls.password.touched)">
+                      <span *ngIf="form.controls.password.errors.required">Password is required.</span>
+                      <span *ngIf="form.controls.password.errors.minlength">Password must be at least 6 characters long.</span>
+                      <span *ngIf="form.controls.password.errors.pattern">Password must contain at least one uppercase letter, one number, and one special character.</span>
                   </mat-error>
-                </mat-form-field>
+                </mat-form-field>    
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Repeat Password</mat-label>
                   <input type="password" matInput name="Repeat_Password" required formControlName="repeat_password" ngModel placeholder="Repeat Password" />
@@ -48,7 +51,7 @@
                 </mat-form-field>
                   <!-- <mat-checkbox (click)="openTermsModal()" [(ngModel)]="termsAccepted" value="" color="primary" class="my-2">I agree to the terms and conditions</mat-checkbox>
                    Terms and Conditions Modal -->
-                <button mat-raised-button color="primary" class="w-100 mt-3">Sign Up</button>
+                <button mat-raised-button color="primary" class="w-100 mt-3" [disabled]="form.invalid">Sign Up</button>
               </form>
 
               <div class="d-flex justify-content-center mt-5">
