--- a/src/app/shared/search-resort/search-resort.component.html
+++ b/src/app/shared/search-resort/search-resort.component.html
@@ -13,7 +13,7 @@
       <div class="col-lg-3">
         <mat-form-field appearance="outline">
           <mat-label>Checkin & Checkout</mat-label>
-          <mat-date-range-input [rangePicker]="picker">
+          <mat-date-range-input [rangePicker]="picker" (click)="picker.open()">
             <input matStartDate placeholder="Checkin date" />
             <input matEndDate placeholder="Checkout date" />
           </mat-date-range-input>
@@ -21,6 +21,7 @@
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
+        
       </div>
       <div class="col-lg-3 position-relative">
         <mat-form-field appearance="outline">
