--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -30,9 +30,9 @@
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
-                  <input type="{{ hide ? 'password' : 'text' }}" matInput name="Password" required formControlName="password" ngModel placeholder="Enter Password" />
-                  <button mat-icon-button matSuffix (click)="togglePasswordVisibility()">
-                      <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+                  <input type="{{ password_hide ? 'password' : 'text' }}" matInput name="Password" required formControlName="password" ngModel placeholder="Enter Password" />
+                  <button type="button" mat-icon-button matSuffix (click)="togglePasswordVisibility()">
+                    <mat-icon>{{ password_hide ? 'visibility_off' : 'visibility' }}</mat-icon>
                   </button>
                   <mat-error *ngIf="form.controls.password.errors && (form.controls.password.dirty || form.controls.password.touched)">
                       <span *ngIf="form.controls.password.errors.required">Password is required.</span>
@@ -42,7 +42,11 @@
                 </mat-form-field>    
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Repeat Password</mat-label>
-                  <input type="password" matInput name="Repeat_Password" required formControlName="repeat_password" ngModel placeholder="Repeat Password" />
+                  <input type="{{ repeate_password_hide ? 'password' : 'text' }}" matInput name="repeat_password" required formControlName="repeat_password" ngModel placeholder="Repeat Password" />
+                  <button type="button" mat-icon-button matSuffix (click)="toggleRepeatPasswordVisibility()">
+                    <mat-icon>{{ repeate_password_hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+                  </button>
+                  
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                   <mat-error *ngIf="form.controls.repeat_password.errors && (form.controls.repeat_password.dirty ||  form.controls.repeat_password.touched) ">
