--- a/src/app/modules/settings/settings.component.html
+++ b/src/app/modules/settings/settings.component.html
@@ -12,7 +12,7 @@
             <h3 class="mb-3 text-center">Personal Details</h3>
             <form [formGroup]="form">
               <div class="mt-3 d-flex justify-content-between align-items-end" *ngIf="editingField !== 'full_name'">
-                <p><strong>Name:</strong> {{ form.value.full_name }}</p> <button mat-button class="btn btn-outline-primary" (click)="editField('full_name')">Edit</button>
+                <p><strong>Name:</strong> {{ form.value.full_name }}</p><!-- <button mat-button class="btn btn-outline-primary" (click)="editField('full_name')">Edit</button>-->
               </div>
               <div class="mt-3" *ngIf="editingField === 'full_name'">
                 <mat-form-field appearance="outline">
@@ -27,7 +27,7 @@
           
               
               <div class="mt-3 d-flex justify-content-between align-items-end" *ngIf="editingField !== 'mobile_number'">
-                <p><strong>Mobile No:</strong> {{ form.value.mobile_number }}</p><button mat-button class="btn btn-outline-primary" (click)="editField('mobile_number')">Edit</button>
+                <p><strong>Mobile No:</strong> {{ form.value.mobile_number }}</p><!--<button mat-button class="btn btn-outline-primary" (click)="editField('mobile_number')">Edit</button>-->
               </div>
               <div class="mt-3" *ngIf="editingField === 'mobile_number'">
                 <mat-form-field appearance="outline">
@@ -42,9 +42,8 @@
           
               
               <div class="mt-3 d-flex justify-content-between align-items-end" *ngIf="editingField !== 'email'">
-                   <p><strong>Email:</strong> {{ form.value.email }}</p> <button mat-button class="btn btn-outline-primary" (click)="editField('email')">Edit</button>
-              
-                
+                   <p><strong>Email:</strong> {{ form.value.email }}</p> <!--<button mat-button class="btn btn-outline-primary" (click)="editField('email')">Edit</button>-->
+                              
               </div>
               <div class="mt-3" *ngIf="editingField === 'email'">
                 <mat-form-field appearance="outline">
@@ -69,11 +68,51 @@
                 <mat-label>Nationality</mat-label>
                 <input matInput type="text">
               </mat-form-field>
-              <mat-form-field appearance="outline" class="mt-3">
-                <mat-label>Address</mat-label>
-                <input matInput type="text">
-              </mat-form-field>
               
+              <div class="mt-3">
+                <mat-form-field appearance="outline" class="half-width">
+                  <mat-label>Address Line 1</mat-label>
+                  <input matInput type="text" required>
+                </mat-form-field>
+              </div>
+              
+              
+                <mat-form-field appearance="outline" class="half-width">
+                  <mat-label>Address Line 2</mat-label>
+                  <input matInput type="text">
+                </mat-form-field>
+
+              <div class="mt-3 d-flex justify-content-between">
+              
+                <mat-form-field appearance="outline" class="half-width">
+                  <mat-label>City</mat-label>
+                  <input matInput type="text" required>
+                </mat-form-field>
+                &nbsp;&nbsp;
+                <mat-form-field appearance="outline" class="half-width">
+                  <mat-label>State</mat-label>
+                  <input matInput type="text" required>
+                </mat-form-field>
+              </div>
+              
+              <div class="mt-3 d-flex justify-content-between">
+                <mat-form-field appearance="outline" class="half-width">
+                  <mat-label>Pincode</mat-label>
+                  <input matInput type="text" required>
+                </mat-form-field>&nbsp;&nbsp;
+              
+                <mat-form-field appearance="outline" class="half-width">
+                  <mat-label>Country</mat-label>
+                  <mat-select required>
+                    <mat-option *ngFor="let country of countries" [value]="country">
+                      {{ country }}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="mt-3 text-center">
+                  <button mat-button class="btn btn-primary">Save</button>
+              </div>
             </form>
           </div>
 
