--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -98,19 +98,19 @@
                       <p class="mb-0">
                         <strong>Cottage type:</strong> {{ room.cottage_type }}
                       </p>
-                      <p><strong>Bed type:</strong> {{ room.bed_type }}</p>
-                      <div class="d-flex gap-2">
+                      <!-- <p><strong>Bed type:</strong> {{ room.bed_type }}</p> -->
+                      <!-- <div class="d-flex gap-2">
                         <span *ngFor="let amenity of room.amenities">
                           <span>{{ amenity }}</span>
                         </span>
-                      </div>
+                      </div> -->
                     </div>
                     <div class="col-6 details-right text-end">
-                      <div class="star-rating">{{ room.rating }}</div>
-                      <h5>{{ room.rating }}</h5>
-                      <p class="card-text">
+                      <!-- <div class="star-rating">{{ room.rating }}</div>
+                      <h5>{{ room.rating }}</h5> -->
+                      <!-- <p class="card-text">
                         <small class="text-muted">{{ weekDayPrice }}</small>
-                      </p>
+                      </p> -->
                       <button class="btn btn-primary" (click)="addRoom()">
                         Add room
                       </button>
