--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -108,6 +108,12 @@
                     <div class="col-6 details-right text-end">
                       <!-- <div class="star-rating">{{ room.rating }}</div>
                       <h5>{{ room.rating }}</h5> -->
+                      <p class="card-text">Week Day Price : 
+                        <small class="text-muted">{{ weekDayPrice }}</small>
+                      </p>
+                      <p class="card-text">WeekEnd Price : 
+                        <small class="text-muted">{{ weekendPrice }}</small>
+                      </p>
                       <!-- <p class="card-text">
                         <small class="text-muted">{{ weekDayPrice }}</small>
                       </p> -->
