--- a/src/app/shared/search-resort/search-resort.component.html
+++ b/src/app/shared/search-resort/search-resort.component.html
@@ -111,7 +111,7 @@
       <div class="col-auto flex-grow-1">
         <!-- <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Sign In</button> -->
 
-        <button mat-raised-button color="primary" class="w-100" (click)="goToVanavihari()">
+        <button mat-raised-button color="primary" class="w-100" (click)="goToRooms()">
           Search
         </button>
         <!-- <button
