--- a/src/app/modules/booking-summary/booking-summary.component.html
+++ b/src/app/modules/booking-summary/booking-summary.component.html
@@ -87,6 +87,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 me-auto mt-5 mt-md-0">
+                        <a href="javascript:void(0)" (click)="gotosetting()">go to settings</a>
                         <h5 class="mb-4" style="line-height: 1.5;">Check the details we have fetched from your user
                             account Balachandiran!</h5>
                         <!-- <h3>User Details</h3> -->
