--- a/src/app/shared/search-resort/search-resort.component.html
+++ b/src/app/shared/search-resort/search-resort.component.html
@@ -1,5 +1,5 @@
 <section class="search-rooms">
-  <form>
+  <form #searchForm="ngForm">
     <div class="row align-items-center justify-content-center gap-3 gap-lg-0">
       <div class="col-lg-3">
         <mat-form-field appearance="outline">
@@ -21,7 +21,7 @@
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
-
+        
       </div>
       <div class="col-lg-3 position-relative">
         <mat-form-field appearance="outline">
@@ -43,8 +43,11 @@
                       <button class="btn" type="button" (click)="decrementAdults()">
                         -
                       </button>
-                      <input type="number" id="adultsCount" name="adults" class="form-control text-center" [(ngModel)]="adultsCount" [attr.min]="minRooms" />
-                      <button class="btn" type="button" (click)="incrementAdults()">+</button>
+                      <input type="number" id="adultsCount" name="adults" class="form-control text-center"
+                        [(ngModel)]="adultsCount" />
+                      <button class="btn" type="button" (click)="incrementAdults()">
+                        +
+                      </button>
                     </div>
                   </div>
                 </div>
@@ -56,8 +59,11 @@
                       <button class="btn" type="button" (click)="decrementChildren()">
                         -
                       </button>
-                      <input type="number" id="childrenCount" name="children" class="form-control text-center" [(ngModel)]="childrenCount" />
-                      <button class="btn" type="button" (click)="incrementChildren()" [disabled]="isMaxReached">+</button>
+                      <input type="number" id="childrenCount" name="children" class="form-control text-center"
+                        [(ngModel)]="childrenCount" />
+                      <button class="btn" type="button" (click)="incrementChildren()" [disabled]="isMaxReached">
+                        +
+                      </button>
                     </div>
                     <div *ngIf="isMaxReached" class="text-danger mt-2">
                       Maximum limit reached for children ({{ maxChildren }}).
@@ -66,7 +72,7 @@
                 </div>
                 <!-- Age dropdowns -->
                 <div id="ageDropdowns">
-                  <div class="col-auto pb-1" *ngFor="let i of getChildrenCountArray()">
+                  <div class="col-auto" *ngFor="let i of getChildrenCountArray()">
                     <select class="form-select mb-3" name="childAge" [(ngModel)]="selectedAges[i]">
                       <option value="" disabled>Age required</option>
                       <option value="0-2">0 - 2 years</option>
@@ -84,14 +90,11 @@
                         -
                       </button>
                       <input type="number" id="roomsCount" name="rooms" class="form-control text-center"
-                        [(ngModel)]="roomsCount" (input)="onRoomCountChange($event)"  [min]="1" />
+                        [(ngModel)]="roomsCount" />
                       <button class="btn" type="button" (click)="incrementRooms()">
                         +
                       </button>
                     </div>
-                  </div>
-                  <div class="col-sm-6" *ngIf="extraBed">
-                    Extra Bed: {{extraBed}}
                   </div>
                 </div>
               </div>
@@ -107,7 +110,8 @@
       </div>
       <div class="col-auto flex-grow-1">
         <!-- <button mat-raised-button color="primary" (click)="goToSignin()" class="w-100 mt-1">Sign In</button> -->
-        <button mat-raised-button color="primary" class="w-100" (click)="goToVanavihari()">
+
+        <button mat-raised-button color="primary" class="w-100" [disabled]="searchForm.invalid" (click)="goToVanavihari()">
           Search
         </button>
         <!-- <button
