--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -6,6 +6,10 @@
         <img src="assets/img/logo-vana.png" alt="logo-vana">
       </a>
       <ul class="navbar-nav d-flex flex-row gap-2 gap-lg-3">
+        <li class="nav-item" *ngIf="!isLoggedIn()">
+          <a class="nav-link" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
+            <i class="fa-solid fa-home me-2"></i>Home </a>
+        </li>
         <li class="nav-item dropdown d-none d-lg-block">
           <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
